fix. form layout issue

--- a/exercises/JS230_Front_End_Dev/Forms_Validation/form_validation_part_1/style.css
+++ b/exercises/JS230_Front_End_Dev/Forms_Validation/form_validation_part_1/style.css
@@ -25,7 +25,6 @@ form {
   padding: 20px;
   margin: 15px auto;
   width: 800px;
-  height: 513px;
   background-color: #fff;
 }
 
